--- a/MovieApp/app/src/main/res/navigation/nav_graph.xml
+++ b/MovieApp/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/nav_graoh"
     app:startDestination="@id/movieListFragment">
 
     <fragment
@@ -11,12 +11,18 @@
         android:label="fragment_movie_list"
         tools:layout="@layout/fragment_movie_list" >
         <action
-            android:id="@+id/action_movieListFragment_to_movieDetailsFragment"
-            app:destination="@id/movieDetailsFragment" />
+            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" >
+            <argument
+                android:name="selectedMovie"
+                app:argType="com.example.movieapp.model.Movie"
+                />
+
+        </action>
     </fragment>
     <fragment
-        android:id="@+id/movieDetailsFragment"
-        android:name="com.example.movieapp.fragments.MovieDetailsFragment"
-        android:label="fragment_movie_details"
-        tools:layout="@layout/fragment_movie_details" />
+        android:id="@+id/movieDetailFragment"
+        android:name="com.example.movieapp.fragments.MovieDetailFragment"
+        android:label="fragment_movie_detail"
+        tools:layout="@layout/fragment_movie_detail" />
 </navigation>
